# postfix-eval

./: CMakeLists.txt  LICENSE  evaluator.cpp
